--- a/contact/index.html
+++ b/contact/index.html
@@ -206,6 +206,14 @@
                 >Terhubung di LinkedIn &rarr;</a
               >
             </div>
+                        <div class="info-block" style="margin-top: 40px">
+              <a
+                href="https://www.instagram.com/lontara.ai/"
+                target="_blank"
+                style="color: var(--accent); font-weight: 700"
+                >Ikuti Kami di Instagram &rarr;</a
+              >
+            </div>
           </div>
 
           <div class="contact-form-card reveal-init">
@@ -282,4 +290,5 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
