--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Lontara - Intelligent Systems for Environmental & Land Management. Spatial data infrastructures and modeling."
     />
-    <title>Lontara | Environmental & Land Intelligence</title>
+    <title>Lontara | Kecerdasan Lingkungan & Lahan</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -67,12 +67,12 @@
 
         <nav class="nav" id="nav-menu">
           <div class="nav-item">
-            <a href="solutions/index.html">Solutions</a>
+            <a href="solutions/index.html">Jasa</a>
           </div>
 
           <div class="nav-item has-dropdown">
             <a href="platform/index.html" class="nav-link-dropdown">
-              Platform
+              Proyek
               <svg
                 class="arrow-icon"
                 width="10"
@@ -91,37 +91,37 @@
               </svg>
             </a>
             <div class="dropdown">
-              <a href="platform/environmental-dashboard.html"
-                >Environmental Dashboard</a
+              <a href="platform/environmental-dashboard.html">WEBGIS</a>
+              <a href="platform/spatial-ml-engine.html"
+                >Machine Learning untuk Spasial</a
               >
-              <a href="platform/spatial-ml-engine.html">Spatial ML Engine</a>
               <a href="platform/data-engineering-tools.html"
-                >Data Engineering Tools</a
+                >Tools untuk Analisis Spasial</a
               >
             </div>
           </div>
 
           <div class="nav-item">
-            <a href="case-studies/index.html">Case Studies</a>
+            <a href="case-studies/index.html">Studi Kasus</a>
           </div>
 
           <div class="nav-item">
-            <a href="research/index.html">Research</a>
+            <a href="research/index.html">Penelitian</a>
           </div>
 
           <div class="nav-item">
-            <a href="resources/index.html">Resources</a>
+            <a href="resources/index.html">Data</a>
           </div>
 
           <div class="nav-item">
-            <a href="publications/index.html">Publications</a>
+            <a href="publications/index.html">Publikasi</a>
           </div>
 
           <div class="nav-item">
-            <a href="about/index.html">About</a>
+            <a href="about/index.html">Tentang</a>
           </div>
 
-          <a href="contact/index.html" class="nav-cta">Contact</a>
+          <a href="contact/index.html" class="nav-cta">Kontak</a>
         </nav>
 
         <button
@@ -138,25 +138,23 @@
 
     <section class="hero">
       <div class="container hero-content">
-        <h1>Intelligent Systems for Environmental & Land Management</h1>
+        <h1>Sistem Cerdas untuk Manajemen Lingkungan & Lahan</h1>
         <p>
-          Lontara designs structured spatial data infrastructures, environmental
-          modeling systems, and interactive geospatial platforms for informed
-          land management decisions.
+          Lontara merancang infrastruktur data spasial terstruktur, sistem
+          pemodelan lingkungan, dan platform geospasial interaktif untuk
+          keputusan manajemen lahan yang terinformasi.
         </p>
 
         <div class="hero-buttons">
-          <a href="solutions/index.html" class="btn-primary"
-            >Explore Solutions</a
-          >
-          <a href="platform/index.html" class="btn-secondary">View Platform</a>
+          <a href="solutions/index.html" class="btn-primary">Jelajahi Solusi</a>
+          <a href="platform/index.html" class="btn-secondary">Lihat Proyek</a>
         </div>
       </div>
     </section>
 
     <section class="webgis-section">
       <div class="container">
-        <h2 class="section-title">Interactive Spatial Intelligence</h2>
+        <h2 class="section-title">WEBGIS Interaktif</h2>
         <p class="section-subtitle">
           Live Preview: Ekplorasi infrastruktur data spasial terintegrasi untuk
           Sub DAS Tanralili. Gunakan fitur interaktif untuk melihat atribut
@@ -189,34 +187,34 @@
 
     <section class="section">
       <div class="container">
-        <h2 class="section-title">Core Capabilities</h2>
+        <h2 class="section-title">Lingkup Keahlian</h2>
         <div class="grid-4">
           <div class="card">
-            <h3>Environmental Intelligence</h3>
+            <h3>Intelijen Lingkungan</h3>
             <p>
-              Watershed modeling, land suitability evaluation, and environmental
-              monitoring systems designed for sustainable planning.
+              Sistem pemodelan DAS, evaluasi lahan, dan pemantauan ekosistem
+              untuk mendukung perencanaan wilayah yang berkelanjutan.
             </p>
           </div>
           <div class="card">
-            <h3>Spatial Data Engineering</h3>
+            <h3>Infrastruktur Data Spasial</h3>
             <p>
-              Geospatial preprocessing pipelines, raster-vector automation, and
-              analytical structuring for environmental datasets.
+              Otomatisasi alur kerja data (pipelines), pemrosesan raster-vektor,
+              dan manajemen arsitektur data geospasial yang kompleks.
             </p>
           </div>
           <div class="card">
-            <h3>WebGIS & Dashboards</h3>
+            <h3>Visualisasi & WebGIS</h3>
             <p>
-              Interactive spatial platforms enabling monitoring, reporting, and
-              spatial decision support.
+              Platform peta interaktif dan dasbor analitik untuk mempermudah
+              pemantauan serta pengambilan keputusan berbasis lokasi.
             </p>
           </div>
           <div class="card">
-            <h3>Spatial Machine Learning</h3>
+            <h3>AI & Prediksi Spasial</h3>
             <p>
-              Predictive modeling and classification frameworks tailored for
-              environmental intelligence systems.
+              Penerapan algoritma cerdas (Machine Learning) untuk klasifikasi
+              lahan dan prediksi pola lingkungan secara otomatis.
             </p>
           </div>
         </div>
@@ -225,36 +223,37 @@
 
     <section class="section section-light">
       <div class="container">
-        <h2 class="section-title">Solutions</h2>
+        <h2 class="section-title">Jasa</h2>
         <p class="section-subtitle">
-          Custom-built spatial systems addressing environmental and land
-          management challenges across institutions and projects.
+          Sistem spasial presisi yang dirancang khusus untuk menjawab tantangan
+          tata kelola lingkungan dan lahan di berbagai skala proyek.
         </p>
         <div class="grid-3">
           <div class="card">
             <a href="solutions/watershed-modeling.html" class="card-link">
-              <h3>Watershed & Hydrological Modeling</h3>
+              <h3>Simulasi Hidrologi & Tata Air</h3>
               <p>
-                Runoff simulation, flood risk evaluation, and watershed
-                performance assessment.
+                Pemodelan limpasan permukaan, mitigasi risiko banjir, dan
+                evaluasi komprehensif daya dukung daerah aliran sungai (DAS).
               </p>
             </a>
           </div>
           <div class="card">
             <a href="solutions/land-suitability.html" class="card-link">
-              <h3>Land Suitability Systems</h3>
+              <h3>Sistem Kesesuaian Tata Lahan</h3>
               <p>
-                Multi-criteria spatial analysis integrated with predictive
-                modeling techniques.
+                Analisis spasial multikriteria yang diintegrasikan dengan
+                teknologi pemodelan prediktif untuk optimalisasi tata guna
+                lahan.
               </p>
             </a>
           </div>
           <div class="card">
             <a href="solutions/environmental-monitoring.html" class="card-link">
-              <h3>Environmental Monitoring Platforms</h3>
+              <h3>Platform Monitoring Terpadu</h3>
               <p>
-                Integrated spatial dashboards for continuous environmental
-                oversight.
+                Dasbor spasial cerdas untuk pengawasan kondisi lingkungan secara
+                aktual, komprehensif, dan berkelanjutan.
               </p>
             </a>
           </div>
@@ -263,17 +262,21 @@
     </section>
 
     <section class="section">
-      <div class="container">
-        <h2 class="section-title">
-          Developing Scalable Environmental Platforms
-        </h2>
-        <p class="section-subtitle">
-          Beyond consulting, Lontara is building structured digital frameworks
-          and scalable spatial intelligence platforms for long-term impact.
+      <div class="container" style="text-align: center">
+        <h2 class="section-title">Inovasi Platform Lingkungan yang Skalabel</h2>
+
+        <p
+          class="section-subtitle"
+          style="max-width: 800px; margin: 0 auto 30px auto"
+        >
+          Lebih dari sekadar layanan konsultasi, Lontara merancang ekosistem
+          digital terstruktur dan platform intelijen spasial adaptif untuk
+          memberikan dampak positif jangka panjang.
         </p>
+
         <div class="center-btn">
           <a href="platform/index.html" class="btn-primary"
-            >Explore Platform Vision</a
+            >Jelajahi Proyek Kami</a
           >
         </div>
       </div>
@@ -281,32 +284,33 @@
 
     <section class="section section-light">
       <div class="container">
-        <h2 class="section-title">Selected Case Studies</h2>
+        <h2 class="section-title">Studi Kasus Unggulan</h2>
         <div class="grid-3">
           <div class="card">
             <a href="case-studies/subdas-tanralili.html" class="card-link">
               <h3>Sub DAS Tanralili</h3>
               <p>
-                Integrated WebGIS dashboard combining LULC, soil, geology, and
-                planning datasets for spatial analysis.
+                Dasbor WebGIS terintegrasi yang menyatukan data tutupan lahan
+                (LULC), tanah, geologi, dan tata ruang untuk analisis wilayah
+                yang komprehensif.
               </p>
             </a>
           </div>
           <div class="card">
             <a href="case-studies/land-ml-project.html" class="card-link">
-              <h3>Land ML Classification</h3>
+              <h3>Klasifikasi Lahan Berbasis AI</h3>
               <p>
-                Machine learning workflow for predictive land suitability
-                modeling.
+                Penerapan alur kerja <em>Machine Learning</em> untuk memprediksi
+                model kesesuaian lahan secara otomatis dan presisi.
               </p>
             </a>
           </div>
           <div class="card">
             <a href="case-studies/hydrology-model.html" class="card-link">
-              <h3>Hydrological Modeling System</h3>
+              <h3>Sistem Simulasi Hidrologi</h3>
               <p>
-                Data-driven watershed performance evaluation and runoff
-                modeling.
+                Evaluasi kinerja Daerah Aliran Sungai (DAS) dan pemodelan
+                limpasan air yang digerakkan oleh analisis data aktual.
               </p>
             </a>
           </div>
@@ -317,7 +321,7 @@
     <section class="cta">
       <div class="container">
         <h2>Let’s Build Intelligent Environmental Systems</h2>
-        <a href="contact/index.html" class="btn-primary">Get in Touch</a>
+        <a href="contact/index.html" class="btn-primary">Hubungi Kami</a>
       </div>
     </section>
 
