--- a/about/index.html
+++ b/about/index.html
@@ -158,11 +158,11 @@
 
         <nav class="nav" id="nav-menu">
           <div class="nav-item">
-            <a href="../solutions/index.html">Solutions</a>
+            <a href="../solutions/index.html">Jasa</a>
           </div>
           <div class="nav-item has-dropdown">
             <a href="../platform/index.html" class="nav-link-dropdown">
-              Platform
+              Proyek
               <svg
                 class="arrow-icon"
                 width="10"
@@ -182,32 +182,32 @@
             </a>
             <div class="dropdown">
               <a href="../platform/environmental-dashboard.html"
-                >Environmental Dashboard</a
+                >WEBGIS Interaktif</a
               >
-              <a href="../platform/spatial-ml-engine.html">Spatial ML Engine</a>
+              <a href="../platform/spatial-ml-engine.html">Machine Learning untuk Spasial</a>
               <a href="../platform/data-engineering-tools.html"
-                >Data Engineering Tools</a
+                >Tools untuk Analisis Spasial</a
               >
             </div>
           </div>
           <div class="nav-item">
-            <a href="../case-studies/index.html">Case Studies</a>
+            <a href="../case-studies/index.html">Studi Kasus</a>
           </div>
           <div class="nav-item">
-            <a href="../research/index.html">Research</a>
+            <a href="../research/index.html">Penelitian</a>
           </div>
           <div class="nav-item">
-            <a href="../resources/index.html">Resources</a>
+            <a href="../resources/index.html">Data</a>
           </div>
           <div class="nav-item">
-            <a href="../publications/index.html">Publications</a>
+            <a href="../publications/index.html">Publikasi</a>
           </div>
 
           <div class="nav-item">
-            <a href="index.html" class="active">About</a>
+            <a href="index.html" class="active">Tentang</a>
           </div>
 
-          <a href="../contact/index.html" class="nav-cta">Contact</a>
+          <a href="../contact/index.html" class="nav-cta">Kontak</a>
         </nav>
 
         <button
@@ -397,3 +397,4 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
