--- a/solutions/watershed-modeling.html
+++ b/solutions/watershed-modeling.html
@@ -69,68 +69,74 @@
   </head>
   <body>
     <header class="header" id="header">
-      <div class="progress-bar" id="progress-bar"></div>
-      <div class="container nav-container">
-        <div class="logo">
-          <a href="../index.html">
-            <img
-              src="../assets/images/logo.png"
-              alt="Lontara Logo"
-              width="120"
-              height="38"
-            />
-          </a>
-        </div>
-        <nav class="nav" id="nav-menu">
-          <div class="nav-item">
-            <a href="index.html" class="active">Solutions</a>
-          </div>
-          <div class="nav-item has-dropdown">
-            <a href="../platform/index.html" class="nav-link-dropdown">
-              Platform
-              <svg
-                class="arrow-icon"
-                width="10"
-                height="6"
-                viewBox="0 0 10 6"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M1 1L5 5L9 1"
-                  stroke="currentColor"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </a>
-            <div class="dropdown">
-              <a href="../platform/environmental-dashboard.html">Environmental Dashboard</a>
-              <a href="../platform/spatial-ml-engine.html">Spatial ML Engine</a>
-              <a href="../platform/data-engineering-tools.html">Data Engineering Tools</a>
-            </div>
-          </div>
-          <div class="nav-item">
-            <a href="../case-studies/index.html">Case Studies</a>
-          </div>
-          <div class="nav-item">
-            <a href="../research/index.html">Research</a>
-          </div>
-          <div class="nav-item">
-            <a href="../resources/index.html">Resources</a>
-          </div>
-          <div class="nav-item">
-            <a href="../publications/index.html">Publications</a>
-          </div>
-          <div class="nav-item"><a href="../about/index.html">About</a></div>
-          <a href="../contact/index.html" class="nav-cta">Contact</a>
-        </nav>
-        <button class="nav-toggle" id="nav-toggle">
-          <span></span><span></span><span></span>
-        </button>
+  <div class="progress-bar" id="progress-bar"></div>
+  <div class="container nav-container">
+    <div class="logo">
+      <a href="../index.html"
+        ><img
+          src="../assets/images/logo.png"
+          alt="Lontara Logo"
+          width="120"
+          height="38"
+      /></a>
+    </div>
+    <nav class="nav" id="nav-menu">
+      <div class="nav-item">
+        <a href="index.html" class="active">Jasa</a>
       </div>
-    </header>
+      <div class="nav-item has-dropdown">
+        <a href="../platform/index.html" class="nav-link-dropdown"
+          >Proyek
+          <svg
+            class="arrow-icon"
+            width="10"
+            height="6"
+            viewBox="0 0 10 6"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1 1L5 5L9 1"
+              stroke="currentColor"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </a>
+        <div class="dropdown">
+          <a href="../platform/environmental-dashboard.html"
+            >WEBGIS Interaktif</a
+          >
+          <a href="../platform/spatial-ml-engine.html"
+            >Machine Learning untuk Spasial</a
+          >
+          <a href="../platform/data-engineering-tools.html"
+            >Tools untuk Analisis Spasial</a
+          >
+        </div>
+      </div>
+      <div class="nav-item">
+        <a href="../case-studies/index.html">Studi Kasus</a>
+      </div>
+      <div class="nav-item">
+        <a href="../research/index.html">Penelitian</a>
+      </div>
+      <div class="nav-item">
+        <a href="../resources/index.html">Data</a>
+      </div>
+      <div class="nav-item">
+        <a href="../publications/index.html">Publikasi</a>
+      </div>
+      <div class="nav-item"><a href="../about/index.html">Tentang</a></div>
+      <a href="../contact/index.html" class="nav-cta">Kontak</a>
+    </nav>
+    <button class="nav-toggle" id="nav-toggle">
+      <span></span><span></span><span></span>
+    </button>
+  </div>
+</header>
+
 
     <section class="service-header">
       <div class="container">
@@ -237,3 +243,4 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
