--- a/resources/premium/access.html
+++ b/resources/premium/access.html
@@ -92,11 +92,11 @@
         </div>
         <nav class="nav" id="nav-menu">
           <div class="nav-item">
-            <a href="../../solutions/index.html">Solutions</a>
+            <a href="../../solutions/index.html">Jasa</a>
           </div>
           <div class="nav-item has-dropdown">
             <a href="../../platform/index.html" class="nav-link-dropdown"
-              >Platform<svg
+              >Proyek<svg
                 class="arrow-icon"
                 width="10"
                 height="6"
@@ -114,30 +114,30 @@
             ></a>
             <div class="dropdown">
               <a href="../../platform/environmental-dashboard.html"
-                >Environmental Dashboard</a
+                >WEBGIS Interaktif</a
               >
               <a href="../../platform/spatial-ml-engine.html"
-                >Spatial ML Engine</a
+                >Machine Learning untuk Spasial</a
               >
               <a href="../../platform/data-engineering-tools.html"
-                >Data Engineering Tools</a
+                >Tools untuk Analisis Spasial</a
               >
             </div>
           </div>
           <div class="nav-item">
-            <a href="../../case-studies/index.html">Case Studies</a>
+            <a href="../../case-studies/index.html">Studi Kasus</a>
           </div>
           <div class="nav-item">
-            <a href="../../research/index.html">Research</a>
+            <a href="../../research/index.html">Penelitian</a>
           </div>
           <div class="nav-item">
-            <a href="../index.html" class="active">Resources</a>
+            <a href="../index.html" class="active">Data</a>
           </div>
           <div class="nav-item">
-            <a href="../../publications/index.html">Publications</a>
+            <a href="../../publications/index.html">Publikasi</a>
           </div>
-          <div class="nav-item"><a href="../../about/index.html">About</a></div>
-          <a href="../../contact/index.html" class="nav-cta">Contact</a>
+          <div class="nav-item"><a href="../../about/index.html">Tentang</a></div>
+          <a href="../../contact/index.html" class="nav-cta">Kontak</a>
         </nav>
         <button class="nav-toggle" id="nav-toggle">
           <span></span><span></span><span></span>
@@ -220,3 +220,4 @@
     <script src="../../js/main.js"></script>
   </body>
 </html>
+
