--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     />
     <title>Lontara | Kecerdasan Lingkungan & Lahan</title>
 
+    <link rel="icon" type="image/png" href="assets/images/logo.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -343,4 +345,3 @@
     <script src="js/main.js"></script>
   </body>
 </html>
-
