--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <title>Lontara | Kecerdasan Lingkungan & Lahan</title>
 
-    <link rel="icon" type="image/png" href="assets/images/logo.png" />
+    <link rel="icon" type="image/png" href="assets/images/icon.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -345,3 +345,4 @@
     <script src="js/main.js"></script>
   </body>
 </html>
+
