--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
       content="Tentang Lontara - Visi, misi, dan keahlian kami dalam membangun sistem intelijen lingkungan dan tata ruang."
     />
     <title>About Us | Lontara</title>
-
+<link rel="icon" type="image/png" href="assets/images/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -397,5 +397,6 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
 
