--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -9,6 +9,8 @@
     />
     <title>Case Studies | Lontara</title>
 
+    <link rel="icon" type="image/png" href="../assets/images/logo.png" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -246,4 +248,5 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
