--- a/case-studies/land-ml-project.html
+++ b/case-studies/land-ml-project.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Land Suitability ML Project | Lontara</title>
+    <link rel="icon" type="image/png" href="../assets/images/logo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -216,4 +217,5 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
