--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
     />
     <title>About Us | Lontara</title>
 
-    <link rel="icon" type="image/png" href="../assets/images/logo.png" />
+    <link rel="icon" type="image/png" href="../assets/images/icon.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -399,6 +399,7 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
 
 
