--- a/platform/index.html
+++ b/platform/index.html
@@ -9,6 +9,8 @@
     />
     <title>Platform Overview | Lontara</title>
 
+    <link rel="icon" type="image/png" href="../assets/images/icon.png" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -384,4 +386,5 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
