--- a/platform/roadmap.html
+++ b/platform/roadmap.html
@@ -9,6 +9,8 @@
     />
     <title>Platform Roadmap | Lontara</title>
 
+    <link rel="icon" type="image/png" href="../assets/images/icon.png" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -182,12 +184,12 @@
 
         <nav class="nav" id="nav-menu">
           <div class="nav-item">
-            <a href="../solutions/index.html">Solutions</a>
+            <a href="../solutions/index.html">Jasa</a>
           </div>
 
           <div class="nav-item has-dropdown">
             <a href="index.html" class="nav-link-dropdown active">
-              Platform
+              Proyek
               <svg
                 class="arrow-icon"
                 width="10"
@@ -206,27 +208,27 @@
               </svg>
             </a>
             <div class="dropdown">
-              <a href="environmental-dashboard.html">Environmental Dashboard</a>
-              <a href="spatial-ml-engine.html">Spatial ML Engine</a>
-              <a href="data-engineering-tools.html">Data Engineering Tools</a>
+              <a href="environmental-dashboard.html">WEBGIS Interaktif</a>
+              <a href="spatial-ml-engine.html">Machine Learning untuk Spasial</a>
+              <a href="data-engineering-tools.html">Data untuk Analisis Spasial</a>
             </div>
           </div>
 
           <div class="nav-item">
-            <a href="../case-studies/index.html">Case Studies</a>
+            <a href="../case-studies/index.html">Studi Kasus</a>
           </div>
           <div class="nav-item">
-            <a href="../research/index.html">Research</a>
+            <a href="../research/index.html">Penelitian</a>
           </div>
           <div class="nav-item">
-            <a href="../resources/index.html">Resources</a>
+            <a href="../resources/index.html">Data</a>
           </div>
           <div class="nav-item">
-            <a href="../publications/index.html">Publications</a>
+            <a href="../publications/index.html">Publikasi</a>
           </div>
-          <div class="nav-item"><a href="../about/index.html">About</a></div>
+          <div class="nav-item"><a href="../about/index.html">Tentang</a></div>
 
-          <a href="../contact/index.html" class="nav-cta">Contact</a>
+          <a href="../contact/index.html" class="nav-cta">Kontak</a>
         </nav>
 
         <button
@@ -370,3 +372,4 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
