--- a/platform/spatial-ml-engine.html
+++ b/platform/spatial-ml-engine.html
@@ -61,11 +61,11 @@
 
         <nav class="nav" id="nav-menu">
           <div class="nav-item">
-            <a href="../solutions/index.html">Solutions</a>
+            <a href="../solutions/index.html">Jasa</a>
           </div>
           <div class="nav-item has-dropdown">
             <a href="index.html" class="nav-link-dropdown active">
-              Platform
+              Proyek
               <svg
                 class="arrow-icon"
                 width="10"
@@ -84,13 +84,13 @@
               </svg>
             </a>
             <div class="dropdown">
-              <a href="environmental-dashboard.html">Environmental Dashboard</a>
+              <a href="environmental-dashboard.html">WEBGIS Interaktif</a>
               <a
                 href="spatial-ml-engine.html"
                 style="color: var(--primary); font-weight: 600"
-                >Spatial ML Engine</a
+                >Machine Learning untuk Spasial</a
               >
-              <a href="data-engineering-tools.html">Data Engineering Tools</a>
+              <a href="data-engineering-tools.html">Tools untuk Analisis Spasial</a>
             </div>
           </div>
           <div class="nav-item">
@@ -262,4 +262,5 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
