--- a/platform/spatial-ml-engine.html
+++ b/platform/spatial-ml-engine.html
@@ -8,7 +8,7 @@
       content="Lontara Spatial ML Engine - Pemodelan prediktif dan klasifikasi otomatis untuk analisis lingkungan dan kesesuaian lahan."
     />
     <title>Spatial ML Engine | Lontara Platform</title>
-
+<link rel="icon" type="image/png" href="../assets/images/icon.png" />
     <link rel="icon" type="image/png" href="../assets/images/icon.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -262,5 +262,6 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
 
