--- a/research/arcgis-workflow.html
+++ b/research/arcgis-workflow.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Automasi Workflow ArcGIS untuk Analisis DAS | Lontara</title>
+
+    <link rel="icon" type="image/png" href="../assets/images/icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Lora:ital,wght@0,400;0,600;1,400&display=swap"
       rel="stylesheet"
@@ -217,4 +219,5 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
