--- a/solutions/land-suitability.html
+++ b/solutions/land-suitability.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evaluasi Kesesuaian Lahan | Lontara</title>
+    <link rel="icon" type="image/png" href="../assets/images/icon.png" />
+    
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -237,4 +239,5 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
