--- a/research/index.html
+++ b/research/index.html
@@ -9,6 +9,8 @@
     />
     <title>Research & Insights | Lontara</title>
 
+    <link rel="icon" type="image/png" href="../assets/images/icon.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -268,4 +270,5 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
