--- a/resources/free/webgis-basic-template.html
+++ b/resources/free/webgis-basic-template.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebGIS Basic Template | Lontara Free Resources</title>
-
-    <link rel="icon" type="image/png" href="../assets/images/icon.png" />
+      
+    <link rel="icon" type="image/png" href="../../assets/images/icon.png" />
     
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap"
@@ -209,6 +209,7 @@
     <script src="../../js/main.js"></script>
   </body>
 </html>
+
 
 
 
