--- a/about/index.html
+++ b/about/index.html
@@ -260,23 +260,16 @@
       </div>
     </section>
 
-    <section class="section section-light">
+<section class="section section-light">
       <div class="container">
         <div class="founder-section">
           <div class="founder-image reveal-init">
-            <div
-              style="
-                width: 100%;
-                height: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                color: var(--text-muted);
-                font-weight: 500;
-              "
-            >
-              [ Foto Fajar Nugraha ]
-            </div>
+            <img 
+              src="../assets/images/Foto%20Pribadi.jpeg" 
+              alt="Fajar Nugraha - Founder Lontara" 
+              style="width: 100%; height: 100%; object-fit: cover; display: block;"
+            />
+          </div>
           </div>
 
           <div class="founder-text reveal-init">
@@ -399,6 +392,7 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
 
 
