--- a/index.html
+++ b/index.html
@@ -191,25 +191,25 @@
       <div class="container">
         <h2 class="section-title">Lingkup Keahlian</h2>
         <div class="grid-4">
-          <div class="card">
+          <div class="card" style="text-align: center;">
             <h3>Pemodelan Lingkungan & DAS</h3>
             <p>
               Menganalisis kesesuaian lahan dan mengevaluasi kinerja Daerah Aliran Sungai (DAS) guna mendukung strategi konservasi tanah, air, serta perencanaan wilayah yang berkelanjutan.
             </p>
           </div>
-          <div class="card">
+          <div class="card" style="text-align: center;">
             <h3>Otomatisasi Geodatabase</h3>
             <p>
               Menyederhanakan alur kerja data keruangan melalui skrip otomatisasi. Menyajikan pengelolaan geodatabase raster dan vektor yang lebih cepat, akurat, dan terstruktur.
             </p>
           </div>
-          <div class="card">
+          <div class="card" style="text-align: center;">
             <h3>Visualisasi Spasial (WebGIS)</h3>
             <p>
               Mentransformasi data geospasial yang kompleks menjadi platform peta interaktif dan dasbor analitik yang intuitif untuk mempercepat proses pengambilan keputusan.
             </p>
           </div>
-          <div class="card">
+          <div class="card" style="text-align: center;">
             <h3>Prediksi Spasial & AI</h3>
             <p>
               Menerapkan algoritma Machine Learning tingkat lanjut untuk klasifikasi tutupan lahan otomatis, simulasi skenario lingkungan, dan pemodelan prediksi tata ruang di masa depan.
@@ -318,7 +318,7 @@
 
     <section class="cta">
       <div class="container">
-        <h2>Let’s Build Intelligent Environmental Systems</h2>
+        <h2>Mari Wujudkan Sistem Lingkungan yang Cerdas</h2>
         <a href="contact/index.html" class="btn-primary">Hubungi Kami</a>
       </div>
     </section>
@@ -341,6 +341,7 @@
     <script src="js/main.js"></script>
   </body>
 </html>
+
 
 
 
