--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           tata kelola lingkungan dan lahan di berbagai skala proyek.
         </p>
         <div class="grid-3">
-          <div class="card">
+          <div class="card" style="text-align: center;">
             <a href="solutions/watershed-modeling.html" class="card-link">
               <h3>Pemodelan Hidrologi & DAS</h3>
               <p>
@@ -236,7 +236,7 @@
               </p>
             </a>
           </div>
-          <div class="card">
+          <div class="card" style="text-align: center;">
             <a href="solutions/land-suitability.html" class="card-link">
               <h3>Evaluasi Kesesuaian Lahan</h3>
               <p>
@@ -246,7 +246,7 @@
               </p>
             </a>
           </div>
-          <div class="card">
+          <div class="card" style="text-align: center;">
             <a href="solutions/environmental-monitoring.html" class="card-link">
               <h3>Pemantauan Lingkungan Berkala</h3>
               <p>
@@ -284,7 +284,7 @@
       <div class="container">
         <h2 class="section-title">Studi Kasus Unggulan</h2>
         <div class="grid-3">
-          <div class="card">
+          <div class="card" style="text-align: center;">
             <a href="case-studies/subdas-tanralili.html" class="card-link">
               <h3>Evaluasi Kinerja & Tata Guna Lahan Sub DAS Tanralili</h3>
               <p>
@@ -294,7 +294,7 @@
               </p>
             </a>
           </div>
-          <div class="card">
+          <div class="card" style="text-align: center;">
             <a href="case-studies/land-ml-project.html" class="card-link">
               <h3>Pengembangan Algoritma Evaluasi Kesesuaian Lahan Otomatis</h3>
               <p>
@@ -303,7 +303,7 @@
               </p>
             </a>
           </div>
-          <div class="card">
+          <div class="card" style="text-align: center;">
             <a href="case-studies/hydrology-model.html" class="card-link">
               <h3>Pemodelan Limpasan Permukaan dan Risiko Banjir</h3>
               <p>
@@ -341,6 +341,7 @@
     <script src="js/main.js"></script>
   </body>
 </html>
+
 
 
 
