--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Tentang Lontara - Visi, misi, dan keahlian kami dalam membangun sistem intelijen lingkungan dan tata ruang."
     />
-    <title>About Us | Lontara</title>
+    <title>Tentang | Lontara</title>
 
     <link rel="icon" type="image/png" href="../assets/images/icon.png" />
     
@@ -392,6 +392,7 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
 
 
