--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Studi Kasus Lontara - Implementasi nyata sistem intelijen lingkungan dan GIS."
     />
-    <title>Case Studies | Lontara</title>
+    <title>Studi Kasus | Lontara</title>
 
     <link rel="icon" type="image/png" href="../assets/images/icon.png" />
     
@@ -248,6 +248,7 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
 
 
