--- a/research/index.html
+++ b/research/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Jurnal, wawasan, dan riset teknis dari Lontara seputar Geospasial, Machine Learning, dan Lingkungan."
     />
-    <title>Research & Insights | Lontara</title>
+    <title>Riset & Wawasan | Lontara</title>
 
     <link rel="icon" type="image/png" href="../assets/images/icon.png" />
 
@@ -270,5 +270,6 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
 
